funcmap_tests/tests/ui/opts/no_parens.stderr
error: expected attribute arguments in parentheses: #[funcmap(...)]
 --> tests/ui/opts/no_parens.rs:4:3
  |
4 | #[funcmap]
  |   ^^^^^^^
